# ai-in-education

./: AGENTS.md  README.md  docker-compose.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/data/: avatars.json
docs/: README.md  level-1-executive-summary.md  level-2-architecture-overview.md  level-3-technical-deep-dive.md  level-4-implementation-guide.md
front-end/: .env.example  .gitignore  Dockerfile  app.config.ts  app.font.ts  env.example  middleware.ts  next.config.ts  package-lock.json  package.json
front-end/actions/: activity.ts  auth.ts  avatar.ts  courses.ts  language.ts  lesson.ts  livekit.ts  section.ts  session.ts  topics.tsx
front-end/app/: globals.css  layout.tsx
front-end/constants/: client.ts  server.ts
front-end/enum/: course.ts
front-end/hooks/: use-local-track-ref.tsx  useAudioRecording.tsx  useChatAndTranscription.tsx  useConnectionDetails.tsx  useDebug.tsx
front-end/i18n/: routing.ts
front-end/lib/: error-helper.ts  markdown.ts  token.ts  types.ts  utils.ts
front-end/messages/: en.json  th.json
front-end/store/: section.ts
front-end/types/: app-config.ts  course.ts  index.ts  lesson.ts  (+4 more)
plans/: 01-project-rebuild-overview.md  02-sprint-1-critical-fixes.md  03-sprint-2-backend-mvp.md  04-sprint-3-frontend-integration.md  05-sprint-4-authentication.md  06-sprint-5-testing.md  07-sprint-6-data-persistence.md  08-sprint-7-production-readiness.md  09-sprint-8-enhancements.md  README.md
voice-agents/: Dockerfile  agent.py  main.py  models.py  pyproject.toml  settings.py
voice-agents/prompt/: system.py  system_v2.py
(+63 files in other folders)
